--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
+  max-width: 650px;
+  margin: 40px auto;
+  padding: 0 10px;
+  color: #444;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +17,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+h1,
+h2,
+h3 {
+  line-height: 1.2;
+  margin: 20px 0;
 }
